Fix SonarQube Issue.